# coach-casey

./: .env.example  .gitignore  .npmrc  README.md  next.config.ts  package.json  pnpm-lock.yaml  posthog-setup-report.md  proxy.ts  pyproject.toml  requirements.txt  vercel.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
docs/: build-standards.md  coach-casey-wireframe.html  cross-training.md  design-principles (1).md  design-principles (2).md  design-principles.md  engineering-foundation.md  foundation-setup-spec.md  home-state-and-chat-working-draft.md  interaction-principles.md  marketing-site-rewrite.md  onboarding-flow-working-draft.md  open-questions-log (1).md  open-questions-log.md  open-questions-rpe-additions.md  post-run-debrief-moment.md  roadmap (1).md  roadmap.md  rpe-feature-spec.md  strategy-foundation (1).md  strategy-foundation.md  strava-api-compliance-note (1).md  strava-api-compliance-note (2).md  strava-api-compliance-note.md  strava-application-pack.md  technical-decision-log.md  v1-scope (1).md  v1-scope (2).md  v1-scope-rpe-updates.md  v1-scope.md  visual-identity.md  voice-guidelines (1).md  voice-guidelines.md
lib/: posthog-server.ts  resend.ts
prompts/: chat-system.md  cross-training-acknowledgement.md  onboarding-validation.md  post-run-debrief.md  post-run-followup-conversational.md  post-run-followup-rpe-branched.md  post-run-followup-structured.md  prompt-engineering-principles.md  strava-blurb.md
public/: manifest.json  sw.js
scripts/: dev-compute-history-rollup.mjs  dev-inspect-athlete.mjs  dev-inspect-memory.mjs  (+9 more)
(+172 files in other folders)
