[project]
name = "coach-casey"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "fastapi>=0.136.0",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "supabase>=2.28.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
